[tool.poetry]
name = "AcmeAPI"
version = "0.1.0"
description = "Acme API 1234"
authors = ["Alex Pedersen <me@alexpdr.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
orator = "^0.9.9"
psycopg2-binary = "^2.8.6"
rethinkdb = "^2.4.8"
python-multipart = "^0.0.5"
python-jose = "^3.2.0"
passlib = "^1.7.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
WebTest = "^2.0.35"
black = "^20.8b1"
pytest = "^6.2.1"
pytest-cov = "^2.10.1"
bandit = "^1.7.0"
uvicorn = "^0.13.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
